// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Molecules/Item default 1`] = `
.c2 {
  display: inline-block;
  margin: 0.1em;
  box-sizing: border-box;
}

.c2 > svg {
  width: 100%;
  height: 100%;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 12px 16px;
  color: $gray-dark;
  min-height: 48px;
  background-color: #fff;
}

.c1 {
  margin: 0 8px 0 0;
}

.c1 svg,
.c1 div {
  width: 36px;
  height: 36px;
}

.c3 {
  margin: 0;
  line-height: 1.5em;
}

<a
  className="c0"
  onClick={[Function]}
>
  <div
    className="c1"
  >
    <span
      className="c2"
      dangerouslySetInnerHTML={
        Object {
          "__html": Object {
            "default": "test-file-stub",
          },
        }
      }
    />
  </div>
  <div
    className=""
  >
    <h4
      className="c3"
    >
      Title
    </h4>
  </div>
</a>
`;

exports[`Storyshots Molecules/Item props onClick 1`] = `
.c2 {
  display: inline-block;
  margin: 0.1em;
  box-sizing: border-box;
}

.c2 > svg {
  width: 100%;
  height: 100%;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 12px 16px;
  color: $gray-dark;
  min-height: 48px;
  background-color: #fff;
}

.c1 {
  margin: 0 8px 0 0;
}

.c1 svg,
.c1 div {
  width: 36px;
  height: 36px;
}

.c3 {
  margin: 0;
  line-height: 1.5em;
}

<a
  className="c0"
  onClick={[Function]}
>
  <div
    className="c1"
  >
    <span
      className="c2"
      dangerouslySetInnerHTML={
        Object {
          "__html": Object {
            "default": "test-file-stub",
          },
        }
      }
    />
  </div>
  <div
    className=""
  >
    <h4
      className="c3"
    >
      Title
    </h4>
  </div>
</a>
`;

exports[`Storyshots Molecules/Item props right 1`] = `
.c2 {
  display: inline-block;
  margin: 0.1em;
  box-sizing: border-box;
}

.c2 > svg {
  width: 100%;
  height: 100%;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 12px 16px;
  color: $gray-dark;
  min-height: 48px;
  background-color: #fff;
}

.c1 {
  margin: 0 8px 0 0;
}

.c1 svg,
.c1 div {
  width: 36px;
  height: 36px;
}

.c3 {
  margin: 0;
  line-height: 1.5em;
}

.c4 {
  margin: 0 0 0 auto;
}

<a
  className="c0"
  onClick={[Function]}
>
  <div
    className="c1"
  >
    <span
      className="c2"
      dangerouslySetInnerHTML={
        Object {
          "__html": Object {
            "default": "test-file-stub",
          },
        }
      }
    />
  </div>
  <div
    className=""
  >
    <h4
      className="c3"
    >
      Title
    </h4>
  </div>
  <div
    className="c4"
  >
    <p>
      Right
    </p>
  </div>
</a>
`;

exports[`Storyshots Molecules/Item props text 1`] = `
.c2 {
  display: inline-block;
  margin: 0.1em;
  box-sizing: border-box;
}

.c2 > svg {
  width: 100%;
  height: 100%;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 12px 16px;
  color: $gray-dark;
  min-height: 48px;
  background-color: #fff;
}

.c1 {
  margin: 0 8px 0 0;
}

.c1 svg,
.c1 div {
  width: 36px;
  height: 36px;
}

.c3 {
  margin: 0;
  line-height: 1.5em;
}

.c4 {
  margin: 0;
  line-height: 1.5em;
}

<a
  className="c0"
  onClick={[Function]}
>
  <div
    className="c1"
  >
    <span
      className="c2"
      dangerouslySetInnerHTML={
        Object {
          "__html": Object {
            "default": "test-file-stub",
          },
        }
      }
    />
  </div>
  <div
    className=""
  >
    <h4
      className="c3"
    >
      Title
    </h4>
    <p
      className="c4"
    >
      Text
    </p>
  </div>
</a>
`;

exports[`Storyshots Molecules/Item props text and right is ArrowButton 1`] = `
.c2 {
  display: inline-block;
  margin: 0.1em;
  box-sizing: border-box;
}

.c2 > svg {
  width: 100%;
  height: 100%;
}

.c6 {
  display: block;
  line-height: 0;
}

.c6 svg {
  width: 24px;
  height: 24px;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 12px 16px;
  color: $gray-dark;
  min-height: 48px;
  background-color: #fff;
}

.c1 {
  margin: 0 8px 0 0;
}

.c1 svg,
.c1 div {
  width: 36px;
  height: 36px;
}

.c3 {
  margin: 0;
  line-height: 1.5em;
}

.c4 {
  margin: 0;
  line-height: 1.5em;
}

.c5 {
  margin: 0 0 0 auto;
}

<a
  className="c0"
  onClick={[Function]}
>
  <div
    className="c1"
  >
    <span
      className="c2"
      dangerouslySetInnerHTML={
        Object {
          "__html": Object {
            "default": "test-file-stub",
          },
        }
      }
    />
  </div>
  <div
    className=""
  >
    <h4
      className="c3"
    >
      Title
    </h4>
    <p
      className="c4"
    >
      Text
    </p>
  </div>
  <div
    className="c5"
  >
    <a
      className="c6"
      onClick={[Function]}
    >
      <span
        className="c2"
        dangerouslySetInnerHTML={
          Object {
            "__html": Object {
              "default": "test-file-stub",
            },
          }
        }
      />
    </a>
  </div>
</a>
`;

exports[`Storyshots Molecules/Item props text and right is ArrowButton and onClick 1`] = `
.c2 {
  display: inline-block;
  margin: 0.1em;
  box-sizing: border-box;
}

.c2 > svg {
  width: 100%;
  height: 100%;
}

.c6 {
  display: block;
  line-height: 0;
}

.c6 svg {
  width: 24px;
  height: 24px;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 12px 16px;
  color: $gray-dark;
  min-height: 48px;
  background-color: #fff;
}

.c1 {
  margin: 0 8px 0 0;
}

.c1 svg,
.c1 div {
  width: 36px;
  height: 36px;
}

.c3 {
  margin: 0;
  line-height: 1.5em;
}

.c4 {
  margin: 0;
  line-height: 1.5em;
}

.c5 {
  margin: 0 0 0 auto;
}

<a
  className="c0"
  onClick={[Function]}
>
  <div
    className="c1"
  >
    <span
      className="c2"
      dangerouslySetInnerHTML={
        Object {
          "__html": Object {
            "default": "test-file-stub",
          },
        }
      }
    />
  </div>
  <div
    className=""
  >
    <h4
      className="c3"
    >
      Title
    </h4>
    <p
      className="c4"
    >
      Text
    </p>
  </div>
  <div
    className="c5"
  >
    <a
      className="c6"
      onClick={[Function]}
    >
      <span
        className="c2"
        dangerouslySetInnerHTML={
          Object {
            "__html": Object {
              "default": "test-file-stub",
            },
          }
        }
      />
    </a>
  </div>
</a>
`;
